examples/vbcmn15/fail/reordRRsc.stl
/** reordRWsc **/
global x y; 
local l m; 

/** Optimised **/ 
read(x,l); 
read(y,m); 
fenceSC; 

/** Unoptimised **/ 
read(y,m); 
fenceSC; 
read(x,l); 


